fix: improve blockquote p spacing (fix #110)

--- a/fx/src/static/style.css
+++ b/fx/src/static/style.css
@@ -116,12 +116,8 @@ img {
 
 blockquote {
     border-left: 2px solid var(--border);
-    padding: 0.2rem 10px;
+    padding: 0 10px;
     margin: 0.2rem 10px;
-}
-
-blockquote p {
-    margin: 0.2rem 0;
 }
 
 table {
